# hetaira

./: CMakeLists.txt  README.md  make.sh  proto_sjsonb.py
include/: acceptor_thread.h  buffer.h  common.h  conc_queue.h  conf.h  db_thread.h  pool.h  protocol.h  raii.h  reciever_thread.h  singleton.h  smart_pointer.h  socket.h  timer.h
src/: CMakeLists.txt  acceptor_thread.cc  conc_queue.cc  db_thread.cc  main.cc  protocol.cc  reciever_thread.cc  socket.cc  timer.cc
src/business/: inner_cmnc.cc  inner_cmnc.h
test/: endecode.py  proto_sjsonb.py
